[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "labo-audio-testkit"
version = "0.1.0"
description = "Audio measurement & DSP test toolkit with CLI + report outputs"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [{ name = "labo-audio-testkit contributors" }]
keywords = ["audio", "dsp", "measurement", "testing", "cli"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
]
dependencies = [
  "matplotlib>=3.7",
  "numpy>=1.24",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.6",
  "mypy>=1.10",
]

[project.urls]
Homepage = "https://github.com/your-org/labo-audio-testkit"
Repository = "https://github.com/your-org/labo-audio-testkit"
Issues = "https://github.com/your-org/labo-audio-testkit/issues"

[project.scripts]
labo-audio-testkit = "labo_audio_testkit.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.mypy]
python_version = "3.9"
strict = false
warn_unused_configs = true
disallow_untyped_defs = true
no_implicit_optional = true
check_untyped_defs = true
follow_imports = "skip"
ignore_missing_imports = true
files = ["src", "tests"]
